modified:   .gitignore 	modified:   .gitmodules 	new file:   examples/metaworld/README.md 	new file:   examples/metaworld/collect_metaworld_to_lerobot.py 	new file:   examples/metaworld/convert_metaworld_to_lerobot.py 	new file:   examples/metaworld/data_collection.sh 	new file:   examples/metaworld/main.py 	new file:   examples/metaworld/metaworld_tools.py 	new file:   examples/metaworld/requirements.in 	new file:   examples/metaworld/requirements.txt 	new file:   examples/metaworld/test_async.py 	new file:   examples/metaworld/visualize_dataset.py 	new file:   run_inference.sh 	new file:   run_train.sh 	modified:   scripts/serve_policy.py 	modified:   src/openpi/training/config.py 	new file:   third_party/metaworld

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third_party/libero"]
 	path = third_party/libero
 	url = https://github.com/Lifelong-Robot-Learning/LIBERO.git
+[submodule "third_party/metaworld"]
+	path = third_party/metaworld
+	url = https://github.com/Farama-Foundation/Metaworld.git
